--- a/Day4_React/volcanus-react/src/index.css
+++ b/Day4_React/volcanus-react/src/index.css
@@ -38,7 +38,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.6em 0.7em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -65,4 +65,10 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+input{
+  margin: 10px;
+  border-radius: 10px;
+  padding: 5px;
 }
