--- a/Day4_React/volcanus-react/src/index.css
+++ b/Day4_React/volcanus-react/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,6 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #000000;
 }
 
 h1 {
@@ -71,4 +72,23 @@ input{
   margin: 10px;
   border-radius: 10px;
   padding: 5px;
+}
+
+.btn{
+  margin: 10px;
+}
+
+.container{
+  display: flex;
+  gap:1rem;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+.card-price{
+  margin-top: 1rem;
+  color: rgb(44, 40, 40);
+  font-weight: 700;
 }
