--- a/Day4_React/volcanus-react/src/App.css
+++ b/Day4_React/volcanus-react/src/App.css
@@ -1,9 +1,6 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-}
 *{
   color: rgb(255, 255, 255);
+  background-color: black;
 }
 .card {
   padding: 2em;
