--- a/Day4_React/volcanus-react/src/index.css
+++ b/Day4_React/volcanus-react/src/index.css
@@ -18,6 +18,15 @@ input{
   width: 100%;
   flex-wrap: wrap;
   justify-content: center;
+  color: rgb(182, 179, 20);
+  
+}
+
+.container h1{
+  font-size: 2rem;
+}
+.container h2{
+  color:azure;
 }
 
 
