--- a/Day4_React/volcanus-react/src/App.css
+++ b/Day4_React/volcanus-react/src/App.css
@@ -61,16 +61,20 @@ h1 {
   gap: 2rem;
 
 }
-
+.product{
+  max-height: 100%;
+  max-width: 70%;
+}
 .product-detail {
   display: flex;
   margin: 2rem;
-  background-color: yellow;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .product-img {
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
 }
 
 .product-img img{
